--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,7 +24,8 @@
     "express": "~4.16.1",
     "express-oauth2-jwt-bearer": "^1.1.0",
     "morgan": "~1.9.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
